--- a/index.html
+++ b/index.html
@@ -1,50 +1,95 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Graphy Example</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Course Page</title>
     <style>
-        /* Inline CSS for styling */
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
+            margin: 0;
+            padding: 0;
         }
-        #graph-container {
-            width: 800px;
-            height: 400px;
-            margin: 20px auto;
+        .container {
+            display: flex;
+            justify-content: space-between;
+            padding: 20px;
+        }
+        .main-content {
+            width: 70%;
+            display: flex;
+            gap: 20px;
+        }
+        .main-content img {
+            width: 200px;
+            height: auto;
+        }
+        .course-details {
+            max-width: 60%;
+        }
+        .course-details h1 {
+            font-size: 24px;
+            margin: 0;
+        }
+        .course-details p {
+            margin: 5px 0;
+        }
+        .course-details .stars {
+            color: #f0c040;
+            font-size: 18px;
+        }
+        .price {
+            color: #e65c00;
+            font-size: 24px;
+            margin-top: 10px;
+        }
+        .button {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+        .other-courses {
+            width: 25%;
+        }
+        .other-courses img {
+            width: 100%;
+            height: auto;
+        }
+        .other-courses p {
+            font-size: 14px;
+            margin: 10px 0;
         }
     </style>
 </head>
 <body>
-    <div id="graph-container"></div>
+    <div class="container">
+        <!-- Main content -->
+        <div class="main-content">
+            <img src="https://via.placeholder.com/200x300.png?text=Course+Image" alt="Course Image">
+            <div class="course-details">
+                <h1>Basics Of Stock Market + Fundamental Analysis + Technical Analysis + Magic of Mutual Funds + Art of Value Investing (For Android & iOS)</h1>
+                <p><span class="stars">★★★★★</span> 3.9 (146 ratings)</p>
+                <p>5 Courses</p>
+                <p>Language: English</p>
+                <p>Validity Period: 365 days</p>
+                <p class="price">₹31999 <small>Including 18% GST</small></p>
+                <a href="#" class="button">Add to Cart</a>
+            </div>
+        </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/graphy@latest/dist/graphy.min.js"></script>
-    <script>
-        // Graphy initialization and data
-        var graph = new Graphy("#graph-container");
-
-        var data = {
-            labels: ["Jan", "Feb", "Mar", "Apr", "May", "Jun"],
-            datasets: [
-                {
-                    label: "Dataset 1",
-                    data: [12, 19, 3, 5, 2, 3],
-                    backgroundColor: "rgba(255, 99, 132, 0.2)",
-                    borderColor: "rgba(255, 99, 132, 1)",
-                    borderWidth: 1
-                },
-                {
-                    label: "Dataset 2",
-                    data: [4, 7, 11, 15, 10, 13],
-                    backgroundColor: "rgba(54, 162, 235, 0.2)",
-                    borderColor: "rgba(54, 162, 235, 1)",
-                    borderWidth: 1
-                }
-            ]
-        };
-
-        // Render the graph
-        graph.render(data);
-    </script>
+        <!-- Other courses -->
+        <div class="other-courses">
+            <p>Other Courses</p>
+            <img src="https://via.placeholder.com/150x150.png?text=Other+Course+Image" alt="Other Course">
+            <p>Basics Of Stock Market + Fundamental Analysis + Technical Analysis +...</p>
+            <p><strike>₹59999</strike> ₹74699</p>
+            <a href="#" class="button">Buy Now</a>
+        </div>
+    </div>
 </body>
 </html>
