--- a/index.html
+++ b/index.html
@@ -38,10 +38,27 @@
             color: #f0c040;
             font-size: 18px;
         }
+        .course-info {
+            font-size: 14px;
+            color: #666;
+            margin: 5px 0;
+        }
+        .course-info a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .course-info a:hover {
+            text-decoration: underline;
+        }
         .price {
             color: #e65c00;
-            font-size: 24px;
+            font-size: 32px;
+            font-weight: bold;
             margin-top: 10px;
+        }
+        .gst-info {
+            color: #666;
+            font-size: 14px;
         }
         .button {
             background-color: #007bff;
@@ -74,10 +91,13 @@
             <div class="course-details">
                 <h1>Basics Of Stock Market + Fundamental Analysis + Technical Analysis + Magic of Mutual Funds + Art of Value Investing (For Android & iOS)</h1>
                 <p><span class="stars">★★★★★</span> 3.9 (146 ratings)</p>
-                <p>5 Courses</p>
-                <p>Language: English</p>
-                <p>Validity Period: 365 days</p>
-                <p class="price">₹31999 <small>Including 18% GST</small></p>
+                <p class="course-info">
+                    <span>📘 5 Courses</span><br>
+                    <span>Language: <a href="#">English</a></span><br>
+                    <span>Validity Period: <a href="#">365 days</a></span>
+                </p>
+                <p class="price">₹31,999</p>
+                <p class="gst-info">Including 18% GST</p>
                 <a href="#" class="button">Add to Cart</a>
             </div>
         </div>
@@ -87,7 +107,7 @@
             <p>Other Courses</p>
             <img src="https://via.placeholder.com/150x150.png?text=Other+Course+Image" alt="Other Course">
             <p>Basics Of Stock Market + Fundamental Analysis + Technical Analysis +...</p>
-            <p><strike>₹59999</strike> ₹74699</p>
+            <p><strike>₹59,999</strike> ₹74,699</p>
             <a href="#" class="button">Buy Now</a>
         </div>
     </div>
