--- a/index.html
+++ b/index.html
@@ -107,7 +107,19 @@
             <p>Other Courses</p>
             <img src="https://via.placeholder.com/150x150.png?text=Other+Course+Image" alt="Other Course">
             <p>Basics Of Stock Market + Fundamental Analysis + Technical Analysis +...</p>
-            <p><strike>₹59,999</strike> ₹74,699</p>
+            <span> 7 Courses</span><br>
+            <p><span class="stars">★★★★★</span> 5.0 (1 ratings)</p>
+            <p><strike>₹50,000</strike> ₹46,999</p>
+            <a href="#" class="button">Buy Now</a>
+        </div>
+
+        <div class="other-courses">
+            <p>Other Courses</p>
+            <img src="https://via.placeholder.com/150x150.png?text=Other+Course+Image" alt="Other Course">
+            <p>Basics Of Stock Market + Fundamental Analysis + Technical Analysis +...</p>
+            <span> 7 Courses</span><br>
+            <p><span class="stars">★★★★★</span> 5.0 (1 ratings)</p>
+            <p><strike>₹50,000</strike> ₹46,999</p>
             <a href="#" class="button">Buy Now</a>
         </div>
     </div>
