--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             margin-top: 10px;
         }
         .other-courses {
+            display: flex;
             width: 25%;
         }
         .other-courses img {
@@ -114,12 +115,11 @@
         </div>
 
         <div class="other-courses">
-            <p>Other Courses</p>
             <img src="https://via.placeholder.com/150x150.png?text=Other+Course+Image" alt="Other Course">
-            <p>Basics Of Stock Market + Fundamental Analysis + Technical Analysis +...</p>
-            <span> 7 Courses</span><br>
+            <p>Crash Course - All About of Stock Market</p>
+            <span> 3 Courses</span><br>
             <p><span class="stars">★★★★★</span> 5.0 (1 ratings)</p>
-            <p><strike>₹50,000</strike> ₹46,999</p>
+            <p><strike>₹25,000</strike> ₹16,999</p>
             <a href="#" class="button">Buy Now</a>
         </div>
     </div>
