--- a/index.html
+++ b/index.html
@@ -10,56 +10,89 @@
             margin: 0;
             padding: 0;
         }
+
+        /* Navigation Bar */
+        .navbar {
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        .navbar a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
+        }
+
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
         .container {
             display: flex;
             justify-content: space-between;
             padding: 20px;
         }
+
         .main-content {
             width: 70%;
             display: flex;
             gap: 20px;
         }
+
         .main-content img {
             width: 200px;
             height: auto;
         }
+
         .course-details {
             max-width: 60%;
         }
+
         .course-details h1 {
             font-size: 24px;
             margin: 0;
         }
+
         .course-details p {
             margin: 5px 0;
         }
+
         .course-details .stars {
             color: #f0c040;
             font-size: 18px;
         }
+
         .course-info {
             font-size: 14px;
             color: #666;
             margin: 5px 0;
         }
+
         .course-info a {
             color: #007bff;
             text-decoration: none;
         }
+
         .course-info a:hover {
             text-decoration: underline;
         }
+
         .price {
             color: #e65c00;
             font-size: 32px;
             font-weight: bold;
             margin-top: 10px;
         }
+
         .gst-info {
             color: #666;
             font-size: 14px;
         }
+
         .button {
             background-color: #007bff;
             color: white;
@@ -70,21 +103,63 @@
             border-radius: 5px;
             margin-top: 10px;
         }
-        .other-courses {
-            display: flex;
+
+        .other-courses-container {
             width: 25%;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
         }
+
+        .other-courses {
+            border: 1px solid #ddd;
+            padding: 10px;
+            border-radius: 10px;
+            box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+        }
+
         .other-courses img {
             width: 100%;
             height: auto;
+            border-radius: 5px;
         }
-        .other-courses p {
+
+        .other-courses p, .other-courses span {
             font-size: 14px;
             margin: 10px 0;
+        }
+
+        .other-courses .stars {
+            color: #f0c040;
+            font-size: 18px;
+        }
+
+        /* Responsive for smaller screens */
+        @media (max-width: 768px) {
+            .container {
+                flex-direction: column;
+            }
+
+            .main-content, .other-courses-container {
+                width: 100%;
+            }
+
+            .main-content img {
+                width: 100px;
+            }
         }
     </style>
 </head>
 <body>
+
+    <!-- Navigation Bar -->
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#courses">Courses</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </div>
+
     <div class="container">
         <!-- Main content -->
         <div class="main-content">
@@ -104,23 +179,25 @@
         </div>
 
         <!-- Other courses -->
-        <div class="other-courses">
-            <p>Other Courses</p>
-            <img src="https://via.placeholder.com/150x150.png?text=Other+Course+Image" alt="Other Course">
-            <p>Basics Of Stock Market + Fundamental Analysis + Technical Analysis +...</p>
-            <span> 7 Courses</span><br>
-            <p><span class="stars">★★★★★</span> 5.0 (1 ratings)</p>
-            <p><strike>₹50,000</strike> ₹46,999</p>
-            <a href="#" class="button">Buy Now</a>
-        </div>
+        <div class="other-courses-container">
+            <div class="other-courses">
+                <p>Other Courses</p>
+                <img src="https://via.placeholder.com/150x150.png?text=Other+Course+Image" alt="Other Course">
+                <p>Basics Of Stock Market + Fundamental Analysis + Technical Analysis +...</p>
+                <span>7 Courses</span><br>
+                <p><span class="stars">★★★★★</span> 5.0 (1 rating)</p>
+                <p><strike>₹50,000</strike> ₹46,999</p>
+                <a href="#" class="button">Buy Now</a>
+            </div>
 
-        <div class="other-courses">
-            <img src="https://via.placeholder.com/150x150.png?text=Other+Course+Image" alt="Other Course">
-            <p>Crash Course - All About of Stock Market</p>
-            <span> 3 Courses</span><br>
-            <p><span class="stars">★★★★★</span> 5.0 (1 ratings)</p>
-            <p><strike>₹25,000</strike> ₹16,999</p>
-            <a href="#" class="button">Buy Now</a>
+            <div class="other-courses">
+                <img src="https://via.placeholder.com/150x150.png?text=Other+Course+Image" alt="Other Course">
+                <p>Crash Course - All About Stock Market</p>
+                <span>3 Courses</span><br>
+                <p><span class="stars">★★★★★</span> 5.0 (1 rating)</p>
+                <p><strike>₹25,000</strike> ₹16,999</p>
+                <a href="#" class="button">Buy Now</a>
+            </div>
         </div>
     </div>
 </body>
