--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         }
 
         .button {
-            background-color: #007bff;
+            background-color: #000; /* Changed to black */
             color: white;
             padding: 10px 20px;
             text-align: center;
@@ -102,6 +102,7 @@
             display: inline-block;
             border-radius: 5px;
             margin-top: 10px;
+            float: right; /* Added to align right */
         }
 
         .other-courses-container {
